# social-media-ai-agent_ag

./: README.md
social-media-ai-agent_ag/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  railway.toml
social-media-ai-agent_ag/src/: __init__.py  config.py  main.py
social-media-ai-agent_ag/src/agent/: __init__.py  graph.py  llm.py  nodes.py  state.py
social-media-ai-agent_ag/src/connectors/: __init__.py  base.py  linkedin.py  twitter.py
social-media-ai-agent_ag/src/mcp/: server.py
social-media-ai-agent_ag/src/web/: __init__.py  api.py  app.py
